--- a/gvnmcg/package.json
+++ b/gvnmcg/package.json
@@ -2,13 +2,13 @@
   "name": "dist",
   "version": "0.1.0",
   "private": true,
-  "homepage": "public/index.html",
+  "homepage": "build/index.html",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-scripts": "3.4.0"
   },
   "scripts": {
